feat: implemented bookmaark endpoints
