# app/Models/Bookmark.php
@@ -1,0 +1,36 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+/**
+ * @OA\Schema(
+ *     schema="Bookmark",
+ *     title="Bookmark",
+ *     description="Bookmark model",
+ *     @OA\Property(property="id", type="integer", example=1),
+ *     @OA\Property(property="user_id", type="integer", example=2),
+ *     @OA\Property(property="product_id", type="integer", example=3),
+ * )
+ */
+class Bookmark extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'user_id', 
+        'product_id'
+    ];
+
+    public function user()
+    {
+        return $this->belongsTo(User::class);
+    }
+
+    public function product()
+    {
+        return $this->belongsTo(Product::class);
+    }
+}
